SONARPY-4082 Refactoring PyProject and Setup.py parsing to PackageRootResolver. (#1067)
GitOrigin-RevId: ca3a6b024c0484fcde49cf2cd3611a9c873057b3